{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 16,
  "lineage": "0ccaef66-5b05-ee00-2cd5-eca4fce05c09",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:730335299009:instance/i-0953b4ba300f60eec",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0953b4ba300f60eec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mi-clave-innovatech",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cd80b6ab53cd5d90",
            "private_dns": "ip-10-0-2-209.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "innovatech-vol-backend",
                  "Project": "innovatech"
                },
                "tags_all": {
                  "Name": "innovatech-vol-backend",
                  "Project": "innovatech"
                },
                "throughput": 125,
                "volume_id": "vol-051c9b4a7d167e9f6",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094eec4185d1b3bfb",
            "tags": {
              "Name": "innovatech-ec2-backend",
              "Project": "innovatech",
              "Role": "backend",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "innovatech-ec2-backend",
              "Project": "innovatech",
              "Role": "backend",
              "Tier": "private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0394df885331792ad"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.backend",
            "module.security_groups.aws_security_group.frontend",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:730335299009:instance/i-03e7d784e329ced39",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e7d784e329ced39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mi-clave-innovatech",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c108aee083f22676",
            "private_dns": "ip-10-0-1-81.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.81",
            "public_dns": "ec2-54-152-77-49.compute-1.amazonaws.com",
            "public_ip": "54.152.77.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "innovatech-vol-frontend",
                  "Project": "innovatech"
                },
                "tags_all": {
                  "Name": "innovatech-vol-frontend",
                  "Project": "innovatech"
                },
                "throughput": 125,
                "volume_id": "vol-0161fa0144c1a199b",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049b34982f93132cc",
            "tags": {
              "Name": "innovatech-ec2-frontend",
              "Project": "innovatech",
              "Role": "frontend",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "innovatech-ec2-frontend",
              "Project": "innovatech",
              "Role": "frontend",
              "Tier": "public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5dd7f622f4f57dd"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.frontend",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335299009:security-group/sg-0394df885331792ad",
            "description": "Security Group para instancia EC2 Backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Todo el trafico saliente",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0394df885331792ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.1.120/32"
                ],
                "description": "SSH desde mi IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "API Despachos desde Frontend",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c5dd7f622f4f57dd"
                ],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [],
                "description": "API Ventas desde Frontend",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c5dd7f622f4f57dd"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "innovatech-sg-backend",
            "name_prefix": "",
            "owner_id": "730335299009",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "innovatech-sg-backend",
              "Project": "innovatech",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "innovatech-sg-backend",
              "Project": "innovatech",
              "Tier": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6a7604a529626f0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.frontend",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335299009:security-group/sg-0c5dd7f622f4f57dd",
            "description": "Security Group para instancia EC2 Frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Todo el trafico saliente",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5dd7f622f4f57dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP desde Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS desde Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "192.168.1.120/32"
                ],
                "description": "SSH desde mi IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "innovatech-sg-frontend",
            "name_prefix": "",
            "owner_id": "730335299009",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "innovatech-sg-frontend",
              "Project": "innovatech",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "innovatech-sg-frontend",
              "Project": "innovatech",
              "Tier": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6a7604a529626f0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335299009:internet-gateway/igw-061a45c306d133f2f",
            "id": "igw-061a45c306d133f2f",
            "owner_id": "730335299009",
            "tags": {
              "Name": "innovatech-igw",
              "Project": "innovatech"
            },
            "tags_all": {
              "Name": "innovatech-igw",
              "Project": "innovatech"
            },
            "vpc_id": "vpc-0c6a7604a529626f0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335299009:route-table/rtb-03a3cd681ce37c9ed",
            "id": "rtb-03a3cd681ce37c9ed",
            "owner_id": "730335299009",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "innovatech-rt-private",
              "Project": "innovatech"
            },
            "tags_all": {
              "Name": "innovatech-rt-private",
              "Project": "innovatech"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6a7604a529626f0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335299009:route-table/rtb-0685dbf0a0fb13c1f",
            "id": "rtb-0685dbf0a0fb13c1f",
            "owner_id": "730335299009",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-061a45c306d133f2f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "innovatech-rt-public",
              "Project": "innovatech"
            },
            "tags_all": {
              "Name": "innovatech-rt-public",
              "Project": "innovatech"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6a7604a529626f0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0fc0a6103bc1e88",
            "route_table_id": "rtb-03a3cd681ce37c9ed",
            "subnet_id": "subnet-094eec4185d1b3bfb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ece9dabf40423589",
            "route_table_id": "rtb-0685dbf0a0fb13c1f",
            "subnet_id": "subnet-049b34982f93132cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335299009:subnet/subnet-094eec4185d1b3bfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094eec4185d1b3bfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335299009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "innovatech-subnet-private",
              "Project": "innovatech",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "innovatech-subnet-private",
              "Project": "innovatech",
              "Tier": "private"
            },
            "vpc_id": "vpc-0c6a7604a529626f0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335299009:subnet/subnet-049b34982f93132cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049b34982f93132cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335299009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "innovatech-subnet-public",
              "Project": "innovatech",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "innovatech-subnet-public",
              "Project": "innovatech",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c6a7604a529626f0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335299009:vpc/vpc-0c6a7604a529626f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-011e86146918b341c",
            "default_route_table_id": "rtb-0c58e602373d72f1b",
            "default_security_group_id": "sg-04cca553608ee3925",
            "dhcp_options_id": "dopt-0d74bbafcd8d3c486",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c6a7604a529626f0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c58e602373d72f1b",
            "owner_id": "730335299009",
            "tags": {
              "Name": "innovatech-vpc",
              "Project": "innovatech"
            },
            "tags_all": {
              "Name": "innovatech-vpc",
              "Project": "innovatech"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}